Pagina de inicio

--- a/tienda_virtual/tienda/templates/store/checkout.html
+++ b/tienda_virtual/tienda/templates/store/checkout.html
@@ -1,6 +1,10 @@
 {% extends 'store/main.html' %}
 {% load static %}
 
+{% block Titulo%}
+Checkout
+{% endblock Titulo%}
+
 {% block contenido %}
 <div class="row">
 	<div class="col-lg-6">
