--- a/tienda_virtual/static/css/main.css
+++ b/tienda_virtual/static/css/main.css
@@ -40,17 +40,6 @@ h1,h2,h3,h4,h5,h6{
 	margin-left: 15px;
 }
 
-#cart-total{
-	display: block;
-	text-align: center;
-	color:#fff;
-	background-color: red;
-	width: 20px;
-	height: 25px;
-	border-radius: 50%;
-	font-size: 14px;
-}
-
 .col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
 	margin-top: 10px;
 }
@@ -101,4 +90,16 @@ h1,h2,h3,h4,h5,h6{
 
 .hidden{
 	display: none!important;
+}
+
+
+#cart-total{
+	display: inline;
+	text-align: center;
+	color:#fff;
+	background-color: red;
+	min-width: 30px;
+	height: 25px;
+	border-radius: 50%;
+	font-size: 14px;
 }
