--- a/tienda_virtual/tienda/templates/store/cart.html
+++ b/tienda_virtual/tienda/templates/store/cart.html
@@ -1,6 +1,10 @@
 {% extends 'store/main.html' %}
 {% load static %}
 
+{% block Titulo%}
+Carrito
+{% endblock Titulo%}
+
 {% block contenido %}
 <div class="row">
     <div class="col-lg-12">
