--- a/tienda_virtual/tienda/templates/store/main.html
+++ b/tienda_virtual/tienda/templates/store/main.html
@@ -8,7 +8,9 @@
     
     <!-- LINK CSS PROPIO -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    
+    <link rel="stylesheet" href="{% static 'css/estilos_Inicio.css' %}">
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+
     <!-- LINK CSS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
@@ -58,7 +60,11 @@
         console.log('Carrito:', cart)
     </script>
     
-    <title>Tienda Virtual</title>
+    <title>
+        {% block Titulo%}
+
+        {% endblock Titulo%}
+    </title>
 </head>
 <body>
 
@@ -71,30 +77,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'inicio' %}">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Sneakers</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Adidas</a></li>
-                            <li><a class="dropdown-item" href="#">Nike</a></li>
-                            <li><a class="dropdown-item" href="#">Puma</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                        <a class="nav-link dropup" aria-current="page" href="{% url 'zapatos' %}">Sneakers</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Ropa</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Hoodies & Jackets</a></li>
-                            <li><a class="dropdown-item" href="#">Camisetas</a></li>
-                            <li><a class="dropdown-item" href="#">Gorras</a></li>
-                            <li><a class="dropdown-item" href="#">Joggers</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                        <a class="nav-link dropup" aria-current="page" href="{% url 'ropa' %}">Ropa</a>
                     </li>
                 </ul>
+
                 <!-- <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
@@ -104,7 +96,7 @@
                     <a href="{% url 'cart' %}">
                         <img  id="cart-icon" src="{% static 'images/cart.png' %}">
                     </a>
-                    <p id="cart-total">{{item_carrito}}</p> 
+                        <p id="cart-total">{{item_carrito}}</p> 
                 </div>
             </div>
         </div>
@@ -115,6 +107,12 @@
         {% block contenido%}
 
         {% endblock contenido%}
+    </div>
+
+    <div>
+        {% block contenido_Inicio%}
+
+        {% endblock contenido_Inicio%}
     </div>
 
 
