--- a/tienda_virtual/tienda/templates/store/ropa.html
+++ b/tienda_virtual/tienda/templates/store/ropa.html
@@ -1,6 +1,9 @@
 {% extends 'store/main.html' %}
 {% load static %}
 <!-- <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
+{% block Titulo%}
+Ropa
+{% endblock Titulo%}
 
 {% block contenido %}
 <h1>seccion de ropa</h1>
