--- a/tienda_virtual/static/css/main.css
+++ b/tienda_virtual/static/css/main.css
@@ -15,7 +15,8 @@ h1,h2,h3,h4,h5,h6{
 
 .thumbnail{
 	width: 100%;
-	height: auto;
+	height: 295.85px;
+	object-fit: fill;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
@@ -43,6 +44,9 @@ h1,h2,h3,h4,h5,h6{
 .col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
 	margin-top: 10px;
 }
+.col-lg-4{
+	margin-top: 10px;
+}
 
 .btn{
 	border-radius: 0;
@@ -64,7 +68,6 @@ h1,h2,h3,h4,h5,h6{
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ececec;
-
 }
 
 .quantity{
