--- a/tienda_virtual/tienda/templates/store/inicio.html
+++ b/tienda_virtual/tienda/templates/store/inicio.html
@@ -12,15 +12,18 @@ Tienda de Ropa
 
         <div class="row_I">
             <div class="col-2_I">
-                <h1>CREA TU PROPIO ESPACIO, LUCE TU ESTILO Y MEJORA TU EXPERIENCIA</h1>
-                <p>Transmite en Streaming, crea y compite en los niveles mas altos <br> 
-                    con las caracteristicas lideres en la industria<br>
-                    <strong>Tenemos los mejores accesorios para tu computadora.</strong>
-                </p>
+                <div class="texto">
+                    <h1>CREA TU PROPIO ESPACIO, LUCE TU ESTILO Y MEJORA TU EXPERIENCIA</h1>
+                    <p>Transmite en Streaming, crea y compite en los niveles mas altos <br> 
+                        con las caracteristicas lideres en la industria<br>
+                        <strong>Tenemos los mejores accesorios para tu computadora.</strong>
+                    </p>
+                </div>
+                
             </div>
 
             <div class="col-2_I">
-                <img src="{% static 'images/Tienda.jpg' %}" alt="homePage">
+                <img class="principal" src="{% static 'images/Tienda.jpg' %}" alt="homePage">
             </div>
         </div>
     </div>
