--- a/tienda_virtual/tienda/templates/store/main.html
+++ b/tienda_virtual/tienda/templates/store/main.html
@@ -92,7 +92,18 @@
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form> -->
                 <div class="form-inline my-2 my-lg-0">
-                    <a href="#"class="btn btn-warning">Login</a>
+                    {% if user.is_authenticated %}
+
+                    
+                        <a href="{% url 'salir' %}"class="btn btn-warning">Cerrar Sesíon</a>
+                        <a class="" href="#">Bienvenido, {{user.username}}</a>
+                    
+
+                    {% else %}
+
+                        <a href="{% url 'login' %}"class="btn btn-primary">Iniciar Sesión</a>
+
+                    {% endif %}
                     <a href="{% url 'cart' %}">
                         <img  id="cart-icon" src="{% static 'images/cart.png' %}">
                     </a>
