Adicion de  camisetas, chaquetas y pantalosnes

--- a/tienda_virtual/tienda/templates/store/camisetas.html
+++ b/tienda_virtual/tienda/templates/store/camisetas.html
@@ -2,24 +2,23 @@
 {% load static %}
 <!-- <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
 {% block Titulo%}
-Ropa
+Camisetas
 {% endblock Titulo%}
 
 {% block contenido %}
-<h1>seccion de ropa</h1>
 <div class="row">
-    {% for ropa in ropas %}
+    {% for camiseta in camisetas %}
     <div class="col-lg-4">
         <div class="cont-Imagen">
-            <img class="thumbnail" src="{{ropa.imagenURL}}">
+            <img class="thumbnail" src="{{camiseta.imagenURL}}">
         </div>
         
         <div class="box-element product">
-            <h6><strong>{{ropa.nombre}}</strong></h6>
+            <h6><strong>{{camiseta.nombre}}</strong></h6>
             <hr>
-            <button data-producto={{ropa.id}} data-accion="add" class="btn btn-outline-secondary add-btn actualizar-carrito">Agregar al Carrito</button>
+            <button data-producto={{camiseta.id}} data-accion="add" class="btn btn-outline-secondary add-btn actualizar-carrito">Agregar al Carrito</button>
             <a class="btn btn-outline-success" href="#">Mirar</a>
-            <h4 style="display: block; float: right;"> <strong>${{ropa.precio|floatformat:0}}</strong></h4>
+            <h4 style="display: block; float: right;"> <strong>${{camiseta.precio|floatformat:0}}</strong></h4>
         </div>
     </div>
     {% endfor %}
