--- a/tienda_virtual/tienda/templates/store/main.html
+++ b/tienda_virtual/tienda/templates/store/main.html
@@ -80,10 +80,16 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'inicio' %}">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropup" aria-current="page" href="{% url 'zapatos' %}">Sneakers</a>
+                        <a class="nav-link dropup" aria-current="page" href="{% url 'zapatos' %}">Zapatos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropup" aria-current="page" href="{% url 'ropa' %}">Ropa</a>
+                        <a class="nav-link dropdown" aria-current="page" href="{% url 'camisetas' %}">Camisetas</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropup" aria-current="page" href="{% url 'pantalones' %}">Pantalones</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropup" aria-current="page" href="{% url 'chaquetas' %}">Chaquetas</a>
                     </li>
                 </ul>
 
