--- a/tienda_virtual/static/css/main.css
+++ b/tienda_virtual/static/css/main.css
@@ -15,11 +15,26 @@ h1,h2,h3,h4,h5,h6{
 
 .thumbnail{
 	width: 100%;
-	height: 295.85px;
-	object-fit: fill;
+	margin-top: 30px;
+	max-height: 295.98px;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+}
+.cont-Imagen
+{
+	max-width: 295.98;
+	max-height: 295.98px;
+}
+
+img
+{
+	object-fit: scale-down;
+}
+
+.container
+{
+	margin-top: 30px;
 }
 
 .precio{
