--- a/tienda_virtual/static/css/main.css
+++ b/tienda_virtual/static/css/main.css
@@ -1,7 +1,3 @@
-body{
-	background-color: hsl(0, 0%, 98%);
-}
-
 h1,h2,h3,h4,h5,h6{
 	color:hsl(0, 0%, 30%);
 }
@@ -16,7 +12,7 @@ h1,h2,h3,h4,h5,h6{
 .thumbnail{
 	width: 100%;
 	margin-top: 30px;
-	max-height: 295.98px;
+	height: 295.98px;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
@@ -24,11 +20,12 @@ h1,h2,h3,h4,h5,h6{
 .cont-Imagen
 {
 	max-width: 295.98;
-	max-height: 295.98px;
+	height: 295.98px;
 }
 
 img
 {
+	
 	object-fit: scale-down;
 }
 
@@ -121,3 +118,4 @@ img
 	border-radius: 50%;
 	font-size: 14px;
 }
+
